kioskhero_web/kubernetes/kioskbear.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kioskbear
spec:
  selector:
    matchLabels:
      app: kioskbear
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: kioskbear
    spec:
      containers:
        - name: django
          image: europe-west1-docker.pkg.dev/roiiogcloud/kioskbear/kioskbear:latest
          imagePullPolicy: Always
          ports:
            - name: gunicorn
              containerPort: 8200
          resources:
            requests:
              cpu: "300m"
              memory: "200Mi"
            limits:
              cpu: "400m"
              memory: 500Mi
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kioskbear
  name: kioskbear
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8200
      targetPort: 8200
      name: kioskbear
  selector:
    app: kioskbear
